# TsingYun_Tutorial_Vision-Aiming

./: .gitignore  LOG.md  debug.py  debug2.py  debug3.py  debug_detections.txt  debug_first_frames.py  debug_model.py  git.sh  pyproject.toml  test_crop.py  test_minc.py
simulator_client/: pipeline.py
tasks/task1-aruco/src/: aruco_render.py  calibrate.py
tasks/task2-detector/models/: mnist_classifier.npz
tasks/task2-detector/src/: detector.py  model.py  train.py
tasks/task3-tracker/src/: kalman_tracker.cpp
