[project]
name = "tsingyun-vision-aiming-homework"
version = "0.1.0"
description = "Tsingyun aiming recruitment homework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
vision = [
    "numpy>=1.26",
    "opencv-python>=4.8",
]
train = [
    "torch>=2.2",
    "torchvision>=0.17",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = [".", "tasks/task2-detector/src"]

[tool.uv]
package = false

[tool.pyright]
extraPaths = ["tasks/task2-detector/src"]
